--- a/assignment5_starter.ipynb
+++ b/assignment5_starter.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import roc_auc_score"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,58 +86,85 @@
     "    for col in numerical_features:\n",
     "        combined_data[col] = pd.to_numeric(combined_data[col], errors='coerce')\n",
     "    combined_data[numerical_features] = combined_data[numerical_features].fillna(combined_data[numerical_features].mean())\n",
-    "    scaler = StandardScaler()\n",
-    "    combined_data[numerical_features] = scaler.fit_transform(combined_data[numerical_features])\n",
+    "    \n",
+    "    # Manually scale features using numpy\n",
+    "    combined_data[numerical_features] = (combined_data[numerical_features] - combined_data[numerical_features].mean()) / combined_data[numerical_features].std()\n",
+    "    \n",
     "    train_data_processed = combined_data[combined_data['level_0'] == 'train'].drop('level_0', axis=1)\n",
     "    test_data_processed = combined_data[combined_data['level_0'] == 'test'].drop('level_0', axis=1)\n",
     "    y_train = train_data_processed['Exited'].values.astype(int)\n",
     "    X_train = train_data_processed.drop(['id', 'Exited'], axis=1).values\n",
     "    X_test = test_data_processed.drop(['id', 'Exited'], axis=1, errors='ignore').values\n",
     "\n",
-    "    return X_train, y_train, X_test, test_ids"
+    "    return X_train, y_train, X_test, test_ids\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cross_validate(X, y, knn, n_splits=5):\n",
-    "    skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "    # Manual StratifiedKFold replacement using numpy\n",
+    "    fold_size = len(y) // n_splits\n",
+    "    indices = np.arange(len(y))\n",
+    "    np.random.shuffle(indices)\n",
+    "\n",
     "    auc_scores = []\n",
     "\n",
-    "    for train_index, val_index in skf.split(X, y):\n",
-    "        X_train_fold, X_val_fold = X[train_index], X[val_index]\n",
-    "        y_train_fold, y_val_fold = y[train_index], y[val_index]\n",
+    "    for fold in range(n_splits):\n",
+    "        val_indices = indices[fold * fold_size:(fold + 1) * fold_size]  # Correct variable name here\n",
+    "        train_indices = np.setdiff1d(indices, val_indices)\n",
+    "        \n",
+    "        X_train_fold, X_val_fold = X[train_indices], X[val_indices]  # Correct variable name here\n",
+    "        y_train_fold, y_val_fold = y[train_indices], y[val_indices]\n",
     "\n",
     "        knn.fit(X_train_fold, y_train_fold)\n",
     "        y_val_proba = knn.predict_proba(X_val_fold)\n",
-    "        auc = roc_auc_score(y_val_fold, y_val_proba)\n",
+    "        \n",
+    "        # Manually calculate ROC AUC\n",
+    "        auc = roc_auc_manual(y_val_fold, y_val_proba)\n",
     "        auc_scores.append(auc)\n",
     "\n",
-    "    return auc_scores"
+    "    return auc_scores\n",
+    "\n",
+    "\n",
+    "\n",
+    "def roc_auc_manual(y_true, y_pred):\n",
+    "    # Sorting based on predicted probabilities\n",
+    "    sorted_indices = np.argsort(y_pred)[::-1]\n",
+    "    y_true_sorted = y_true[sorted_indices]\n",
+    "    pos = np.sum(y_true == 1)\n",
+    "    neg = np.sum(y_true == 0)\n",
+    "    \n",
+    "    tp = 0\n",
+    "    fp = 0\n",
+    "    auc = 0\n",
+    "    \n",
+    "    for i in range(len(y_true_sorted)):\n",
+    "        if y_true_sorted[i] == 1:\n",
+    "            tp += 1\n",
+    "        else:\n",
+    "            fp += 1\n",
+    "            auc += tp\n",
+    "            \n",
+    "    auc /= (pos * neg)\n",
+    "    return auc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=21, distance_metric=euclidean, CV Score=0.9105\n",
-      "k=21, distance_metric=manhattan, CV Score=0.9092\n",
-      "k=21, distance_metric=chebyshev, CV Score=0.9064\n",
-      "k=21, distance_metric=minkowski, p=3, CV Score=0.9102\n",
-      "\n",
-      "Best Parameters: {'k': 21, 'distance_metric': 'euclidean'}\n",
-      "Best CV Score: 0.9105\n",
-      "Number of submission IDs in 'submissions.csv': 10000\n",
-      "Number of unique submission IDs in 'submissions.csv': 10000\n",
-      "No duplicate IDs found in 'submissions.csv'.\n"
+      "k=21, distance_metric=euclidean, CV Score=0.9102\n",
+      "k=21, distance_metric=manhattan, CV Score=0.9097\n",
+      "k=21, distance_metric=chebyshev, CV Score=0.9055\n"
      ]
     }
    ],
@@ -155,6 +179,7 @@
     "best_score = 0\n",
     "best_params = {}\n",
     "\n",
+    "# Manual hyperparameter tuning\n",
     "for k in k_values:\n",
     "    for distance_metric in distance_metrics:\n",
     "        if distance_metric == 'minkowski':\n",
@@ -177,11 +202,15 @@
     "\n",
     "print(\"\\nBest Parameters:\", best_params)\n",
     "print(f\"Best CV Score: {best_score:.4f}\")\n",
+    "\n",
     "if best_params['distance_metric'] == 'minkowski':\n",
     "    knn = KNN(k=best_params['k'], distance_metric=best_params['distance_metric'], p=best_params['p'])\n",
     "else:\n",
     "    knn = KNN(k=best_params['k'], distance_metric=best_params['distance_metric'])\n",
+    "\n",
     "knn.fit(X, y)\n",
+    "\n",
+    "# Make predictions on the test set\n",
     "test_predictions = knn.predict_proba(X_test)\n",
     "\n",
     "# Save test predictions\n",
@@ -191,10 +220,9 @@
     "})\n",
     "submission.to_csv('submissions.csv', index=False)\n",
     "\n",
-    "# Read the saved CSV file to check for duplicates\n",
+    "# Check for duplicates in the submission file\n",
     "submission_csv = pd.read_csv('submissions.csv')\n",
     "\n",
-    "# Check for duplicates\n",
     "print(\"Number of submission IDs in 'submissions.csv':\", len(submission_csv['id']))\n",
     "print(\"Number of unique submission IDs in 'submissions.csv':\", submission_csv['id'].nunique())\n",
     "\n",
