--- a/assignment5_starter.ipynb
+++ b/assignment5_starter.ipynb
@@ -48,7 +48,6 @@
     "            distances = self.compute_distance(self.X_train, x)\n",
     "            k_indices = distances.argsort()[:self.k]\n",
     "            k_nearest_labels = self.y_train[k_indices]\n",
-    "            # Majority vote\n",
     "            counts = np.bincount(k_nearest_labels)\n",
     "            y_pred.append(np.argmax(counts))\n",
     "        return np.array(y_pred)\n",
@@ -86,8 +85,6 @@
     "    for col in numerical_features:\n",
     "        combined_data[col] = pd.to_numeric(combined_data[col], errors='coerce')\n",
     "    combined_data[numerical_features] = combined_data[numerical_features].fillna(combined_data[numerical_features].mean())\n",
-    "    \n",
-    "    # Manually scale features using numpy\n",
     "    combined_data[numerical_features] = (combined_data[numerical_features] - combined_data[numerical_features].mean()) / combined_data[numerical_features].std()\n",
     "    \n",
     "    train_data_processed = combined_data[combined_data['level_0'] == 'train'].drop('level_0', axis=1)\n",
@@ -106,7 +103,6 @@
    "outputs": [],
    "source": [
     "def cross_validate(X, y, knn, n_splits=5):\n",
-    "    # Manual StratifiedKFold replacement using numpy\n",
     "    fold_size = len(y) // n_splits\n",
     "    indices = np.arange(len(y))\n",
     "    np.random.shuffle(indices)\n",
@@ -114,16 +110,12 @@
     "    auc_scores = []\n",
     "\n",
     "    for fold in range(n_splits):\n",
-    "        val_indices = indices[fold * fold_size:(fold + 1) * fold_size]  # Correct variable name here\n",
+    "        val_indices = indices[fold * fold_size:(fold + 1) * fold_size] \n",
     "        train_indices = np.setdiff1d(indices, val_indices)\n",
-    "        \n",
-    "        X_train_fold, X_val_fold = X[train_indices], X[val_indices]  # Correct variable name here\n",
+    "        X_train_fold, X_val_fold = X[train_indices], X[val_indices] \n",
     "        y_train_fold, y_val_fold = y[train_indices], y[val_indices]\n",
-    "\n",
     "        knn.fit(X_train_fold, y_train_fold)\n",
     "        y_val_proba = knn.predict_proba(X_val_fold)\n",
-    "        \n",
-    "        # Manually calculate ROC AUC\n",
     "        auc = roc_auc_manual(y_val_fold, y_val_proba)\n",
     "        auc_scores.append(auc)\n",
     "\n",
@@ -132,7 +124,6 @@
     "\n",
     "\n",
     "def roc_auc_manual(y_true, y_pred):\n",
-    "    # Sorting based on predicted probabilities\n",
     "    sorted_indices = np.argsort(y_pred)[::-1]\n",
     "    y_true_sorted = y_true[sorted_indices]\n",
     "    pos = np.sum(y_true == 1)\n",
@@ -164,22 +155,24 @@
      "text": [
       "k=21, distance_metric=euclidean, CV Score=0.9102\n",
       "k=21, distance_metric=manhattan, CV Score=0.9097\n",
-      "k=21, distance_metric=chebyshev, CV Score=0.9055\n"
+      "k=21, distance_metric=chebyshev, CV Score=0.9055\n",
+      "k=21, distance_metric=minkowski, p=3, CV Score=0.9088\n",
+      "\n",
+      "Best Parameters: {'k': 21, 'distance_metric': 'euclidean'}\n",
+      "Best CV Score: 0.9102\n",
+      "Number of submission IDs in 'submissions.csv': 10000\n",
+      "Number of unique submission IDs in 'submissions.csv': 10000\n",
+      "No duplicate IDs found in 'submissions.csv'.\n"
      ]
     }
    ],
    "source": [
     "X, y, X_test, test_ids = preprocess_data('train.csv', 'test.csv')\n",
-    "\n",
-    "# Hyperparameter tuning with additional distance metrics\n",
     "k_values = [21]\n",
     "distance_metrics = ['euclidean', 'manhattan', 'chebyshev', 'minkowski']\n",
-    "p_values = [3]  # For Minkowski distance\n",
-    "\n",
+    "p_values = [3]\n",
     "best_score = 0\n",
     "best_params = {}\n",
-    "\n",
-    "# Manual hyperparameter tuning\n",
     "for k in k_values:\n",
     "    for distance_metric in distance_metrics:\n",
     "        if distance_metric == 'minkowski':\n",
@@ -210,28 +203,14 @@
     "\n",
     "knn.fit(X, y)\n",
     "\n",
-    "# Make predictions on the test set\n",
     "test_predictions = knn.predict_proba(X_test)\n",
     "\n",
-    "# Save test predictions\n",
     "submission = pd.DataFrame({\n",
     "    'id': test_ids, \n",
     "    'Exited': test_predictions\n",
     "})\n",
     "submission.to_csv('submissions.csv', index=False)\n",
-    "\n",
-    "# Check for duplicates in the submission file\n",
-    "submission_csv = pd.read_csv('submissions.csv')\n",
-    "\n",
-    "print(\"Number of submission IDs in 'submissions.csv':\", len(submission_csv['id']))\n",
-    "print(\"Number of unique submission IDs in 'submissions.csv':\", submission_csv['id'].nunique())\n",
-    "\n",
-    "if len(submission_csv['id']) != submission_csv['id'].nunique():\n",
-    "    duplicates = submission_csv[submission_csv['id'].duplicated(keep=False)]\n",
-    "    print(\"Duplicate IDs found in 'submissions.csv':\")\n",
-    "    print(duplicates)\n",
-    "else:\n",
-    "    print(\"No duplicate IDs found in 'submissions.csv'.\")"
+    "submission_csv = pd.read_csv('submissions.csv')"
    ]
   }
  ],
